# marlin

./: .env.example  .gitignore  .marlin-mints.json  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: anchor.yml  ci.yml  (+1 more)
docs/: 00_AGENT_INSTRUCTIONS.md  01_PRODUCT_OVERVIEW.md  02_ARCHITECTURE.md  03_DATA_MODEL.md  04_SMART_CONTRACTS.md  05_BACKEND_API.md  06_INDEXER.md  07_FRONTEND_DASHBOARD.md  08_CHECKOUT_WIDGET.md  09_PUBLIC_API_AND_SDK.md  10_DEPLOYMENT.md  11_TESTING.md  12_PITCH_ASSETS.md  13_DAY_BY_DAY_PLAN.md  README.md
e2e/: package.json  playwright.config.ts
programs/marlin/: Anchor.toml  Cargo.toml
programs/marlin/src/: errors.rs  lib.rs
programs/marlin/src/instructions/: cancel_subscription.rs  charge_subscription.rs  create_confidential_invoice.rs  create_invoice.rs  create_subscription_plan.rs  initialize_merchant.rs  mod.rs  pause_subscription.rs  pay_confidential_invoice.rs  pay_invoice.rs  resume_subscription.rs  set_plan_active.rs  subscribe.rs  update_merchant.rs  update_subscription_auth.rs  void_invoice.rs
programs/marlin/src/state/: confidential_invoice.rs  invoice.rs  merchant.rs  mod.rs  subscription.rs
scripts/: agent-build-readme-snippet.ts  agent-create-personas.ts  agent-deploy-mints.ts  agent-preflight.sh  agent-print-summary.ts  agent-seed-devnet.ts  build-with-idl.sh  deploy-devnet-mints.ts  fund-personas.ts  seed-devnet.ts  seed.ts  setup-rust-toolchains.sh  smoke-test.ts
tests/: marlin.ts
(+126 files in other folders)
